Corrige alguns erros de sintaxe e refatora o código