@@ -12,13 +12,12 @@ public class NodoMethodCall extends NodoAbstratoBase{
         if(tamanho < 6 || tamanho > 7)
             return false;
 
-        if(!(filhos.get(0) instanceof NodoName))
+        if(!(filhos.getFirst() instanceof NodoName))
             return false;
 
-        if(!(filhos.get(1) instanceof NodoTerminal))
+        if(!(filhos.get(1) instanceof NodoTerminal nodoTerminal))
             return false;
-
-        if(!CompararToken(filhos.get(1), TokenEnums.PONTO))
+        if(!CompararToken(nodoTerminal, TokenEnums.PONTO))
             return false;
 
         if(!(filhos.get(2) instanceof NodoName))
@@ -26,36 +25,35 @@ public class NodoMethodCall extends NodoAbstratoBase{
 
         if(!(filhos.get(3) instanceof NodoTerminal))
             return false;
-
-        if(!CompararToken(filhos.get(3), TokenEnums.PARENTESES_ESQUERDO))
+        nodoTerminal=(NodoTerminal)filhos.get(3);
+        if(!CompararToken(nodoTerminal, TokenEnums.PARENTESES_ESQUERDO))
             return false;
 
-        NodoTerminal nodoTerminal;
         if(tamanho == 6){
             if(!(filhos.get(4) instanceof NodoTerminal))
                 return false;
-
-            if(!CompararToken(filhos.get(4), TokenEnums.PARENTESES_DIREITO))
+            nodoTerminal = (NodoTerminal)filhos.get(4);
+            if(!CompararToken(nodoTerminal, TokenEnums.PARENTESES_DIREITO))
                 return false;
 
             if(!(filhos.get(5) instanceof NodoTerminal))
                 return false;
-
             nodoTerminal = (NodoTerminal) filhos.get(5);
         }
         else {
-            if(!(filhos.get(4) instanceof NodoNameList))
+            if(!(filhos.get(4) instanceof NodoNameList nodoNameList))
+                return false;
+            if(!nodoNameList.ValidarSintaxe())
                 return false;
 
             if(!(filhos.get(5) instanceof NodoTerminal))
                 return false;
-
-            if(!CompararToken(filhos.get(5), TokenEnums.PARENTESES_DIREITO))
+            nodoTerminal = (NodoTerminal) filhos.get(5);
+            if(!CompararToken(nodoTerminal, TokenEnums.PARENTESES_DIREITO))
                 return false;
 
             if(!(filhos.get(6) instanceof NodoTerminal))
                 return false;
-
             nodoTerminal = (NodoTerminal) filhos.get(6);
         }
         return CompararToken(nodoTerminal, TokenEnums.QUEBRA_LINHA);
