@@ -14,55 +14,45 @@ public class NodoMethodHeader extends NodoAbstratoBase {
         tamanho  > 6)
             return false;
 
-        if(!(filhos.get(0) instanceof NodoTerminal))
+        if(!(filhos.getFirst() instanceof NodoTerminal nodoTerminal))
             return false;
-
-        if(!CompararToken(filhos.get(0), TokenEnums.PALAVRA_CHAVE_METHOD))
+        if(!CompararToken(nodoTerminal, TokenEnums.PALAVRA_CHAVE_METHOD))
             return false;
 
         if(!(filhos.get(1) instanceof NodoName))
             return false;
 
-        var nodoName = (NodoName) filhos.get(1);
-        if(!nodoName.ValidarSintaxe())
-            return false;
-
         if(!(filhos.get(2) instanceof NodoTerminal))
             return false;
-
-        if(!CompararToken(filhos.get(2), TokenEnums.PARENTESES_ESQUERDO))
+        nodoTerminal = (NodoTerminal) filhos.get(2);
+        if(!CompararToken(nodoTerminal, TokenEnums.PARENTESES_ESQUERDO))
             return false;
 
-        NodoTerminal nodoTerminal;
         if(tamanho == 6){
-            if(!(filhos.get(3) instanceof NodoNameList))
+            if(!(filhos.get(3) instanceof NodoNameList nodoNameList))
                 return false;
-
-            var nodoNameList = (NodoNameList) filhos.get(3);
             if(!nodoNameList.ValidarSintaxe())
                 return false;
 
             if(!(filhos.get(4) instanceof NodoTerminal))
                 return false;
-
-            if(!CompararToken(filhos.get(4), TokenEnums.PARENTESES_DIREITO))
+            nodoTerminal = (NodoTerminal) filhos.get(4);
+            if(!CompararToken(nodoTerminal, TokenEnums.PARENTESES_DIREITO))
                 return false;
 
             if(!(filhos.get(5) instanceof NodoTerminal))
                 return false;
-
             nodoTerminal = (NodoTerminal) filhos.get(5);
         }
         else {
             if(!(filhos.get(3) instanceof NodoTerminal))
                 return false;
-
-            if(!CompararToken(filhos.get(3), TokenEnums.PARENTESES_ESQUERDO))
+            nodoTerminal = (NodoTerminal) filhos.get(3);
+            if(!CompararToken(nodoTerminal, TokenEnums.PARENTESES_ESQUERDO))
                 return false;
 
             if(!(filhos.get(4) instanceof NodoTerminal))
                 return false;
-
             nodoTerminal = (NodoTerminal) filhos.get(4);
         }
         return CompararToken(nodoTerminal, TokenEnums.QUEBRA_LINHA);
